--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cra-template": "1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
